# ZarzaETC

./: Cargo.toml  LICENSE  README.md
config/: detectors.yaml  instrument.yaml  sky.yaml
data/: ML15_QE.csv  ML15_QE_2.csv  NBB_QE_2.csv  redTransmission.csv
data/SEDs/: Ell13_template_norm.csv  Ell5_template_photons.csv  S0_template_norm.csv  S0_template_photons.csv  Sa_template.csv  Sa_template_photons.csv  Sb_template_photons.csv  Sc_template_photons.csv  Sd_template.csv  Sd_template_norm.csv  constant.csv  pickles_uk_A0V.csv  pickles_uk_A5V.csv  pickles_uk_F2V.csv  pickles_uk_G2V.csv  pickles_uk_G5V.csv  pickles_uk_K2V.csv  pickles_uk_K7V.csv  qso_template_photons.csv  seyfert1_template_photons.csv  seyfert2_template.csv  seyfert2_template_photons.csv
data/filters/: Generic_Johnson_UBVRIJHKL.I.csv  Generic_Johnson_UBVRIJHKL.R.csv  SLOAN_SDSS.g.csv  SLOAN_SDSS.r.csv
doc/: cli_instructions.md  compile.md
doc/zarza_etc/: all.html  index.html  macro.assert_f32_eq!.html  macro.assert_f32_eq.html  (+3 more)
src/: cli.rs  lib.rs  main.rs  main_malo.rs
test-data/: blue_disp_test.csv  blue_ml15_test.csv  blue_nbb_test.csv  curve_constant_2.csv  curve_constant_3.csv  curve_constant_electron.csv  curve_constant_pixel_photon_flux.csv  curve_constant_signal.csv  curve_cum_int.csv  curve_for_inv.csv  curve_inv_x.csv  curve_inv_y.csv  curve_normalize_to_r_mag_test.csv  curve_test.csv  curve_test_2.csv  flat.csv  generated_NaD1_absorption_line.csv  generated_halpha_emission_line.csv  mult_test.csv  prueba.csv  red_ml15_test.csv  sky_model_test.csv  test.csv  test2.csv
(+145 files in other folders)
