[package]
name = "zarza_etc"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
ordered-float = { version = "4.6", features = ["serde"] }
yaml-rust = "0.4"
serde_yaml = "0.9"
nix = "0.29.0"
errno = "0.3"
once_cell = "1.21"
core-foundation = "0.10"
core-foundation-sys = "0.8"
lazy_static = "1.4"
rand = "0.9"
rand_distr = "0.5"
clap = { version = "4.5", features = ["derive"] }
